--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node
+node_modules/
+npm-debug.log*
+yarn.lock
+package-lock.json
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build
+build/
+dist/
 
-# testing
-/coverage
+# Python
+venv/
+.venv/
+__pycache__/
+*.pyc
 
-# production
-/build
-
-# misc
-.DS_Store
+# Env/konfig
+.env
+*.env
+# Frontend env (CRA)
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-venv/
-.venv/
-node_modules/
+# OS/IDE
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# Diverse
+svar_backup.json
